// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONSchemaViewer - Array type test 0 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        array
      </span>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      />
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - Array type test 1 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        array
      </span>
      <li>
        <details
          open={false}
        >
          <summary>
            <code>
              items[..., x, ...]
            </code>
             
            <span
              style={
                {
                  "opacity": "0.6",
                }
              }
            >
              number
            </span>
          </summary>
          <div>
            <div>
              <strong>
                type
              </strong>
               : 
              <span
                style={
                  {
                    "opacity": "0.6",
                  }
                }
              >
                number
              </span>
              <div
                style={
                  {
                    "marginTop": "var(--ifm-table-cell-padding)",
                  }
                }
              />
            </div>
          </div>
        </details>
      </li>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      />
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - Array type test 2 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        array
      </span>
      <ul>
        <li>
          <details
            open={false}
          >
            <summary>
              <code>
                items[x]
              </code>
               
              <span
                style={
                  {
                    "opacity": "0.6",
                  }
                }
              >
                number
              </span>
            </summary>
            <div>
              <div>
                <strong>
                  type
                </strong>
                 : 
                <span
                  style={
                    {
                      "opacity": "0.6",
                    }
                  }
                >
                  number
                </span>
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                />
              </div>
            </div>
          </details>
        </li>
      </ul>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      />
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - Array type test 3 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        array
      </span>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        <div>
          <strong>
            Length :
          </strong>
           
          <code>
            &gt;= 2
          </code>
           
          <strong>
            AND
          </strong>
           
          <code>
            &lt;= 3
          </code>
        </div>
      </div>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - Array type test 4 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        array
      </span>
      <li>
        <details
          open={false}
        >
          <summary>
            <code>
              items[..., x, ...]
            </code>
             
            <span
              style={
                {
                  "opacity": "0.6",
                }
              }
            >
              integer
            </span>
             
            <strong>
              required
            </strong>
          </summary>
          <div>
            <div>
              <strong>
                type
              </strong>
               : 
              <span
                style={
                  {
                    "opacity": "0.6",
                  }
                }
              >
                integer
              </span>
              <div
                style={
                  {
                    "marginTop": "var(--ifm-table-cell-padding)",
                  }
                }
              />
            </div>
          </div>
        </details>
      </li>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        <div>
          <strong>
            Must contain : 
          </strong>
           
          <code>
            at least 2 valid item(s)
          </code>
           
          <strong>
            AND
          </strong>
           
          <code>
            at most 3 valid item(s)
          </code>
        </div>
      </div>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - Array type test 5 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        array
      </span>
      <ul>
        <li>
          <details
            open={false}
          >
            <summary>
              <code>
                items[0]
              </code>
               
              <span
                style={
                  {
                    "opacity": "0.6",
                  }
                }
              >
                number
              </span>
            </summary>
            <div>
              <div>
                <strong>
                  type
                </strong>
                 : 
                <span
                  style={
                    {
                      "opacity": "0.6",
                    }
                  }
                >
                  number
                </span>
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                />
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                >
                  The address number
                </div>
              </div>
            </div>
          </details>
        </li>
        <li>
          <details
            open={false}
          >
            <summary>
              <code>
                items[1]
              </code>
               
              <span
                style={
                  {
                    "opacity": "0.6",
                  }
                }
              >
                string
              </span>
            </summary>
            <div>
              <div>
                <strong>
                  type
                </strong>
                 : 
                <span
                  style={
                    {
                      "opacity": "0.6",
                    }
                  }
                >
                  string
                </span>
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                />
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                >
                  The name of the street
                </div>
              </div>
            </div>
          </details>
        </li>
        <li>
          <details
            open={false}
          >
            <summary>
              <code>
                items[2]
              </code>
               
              <span
                style={
                  {
                    "opacity": "0.6",
                  }
                }
              >
                string
              </span>
            </summary>
            <div>
              <div>
                <strong>
                  type
                </strong>
                 : 
                <span
                  style={
                    {
                      "opacity": "0.6",
                    }
                  }
                >
                  string
                </span>
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                >
                  <div>
                    <strong>
                      Possible values :
                    </strong>
                     
                    <code>
                      ["Street","Avenue","Boulevard"]
                    </code>
                  </div>
                </div>
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                >
                  The type of street
                </div>
              </div>
            </div>
          </details>
        </li>
        <li>
          <details
            open={false}
          >
            <summary>
              <code>
                items[3]
              </code>
               
              <span
                style={
                  {
                    "opacity": "0.6",
                  }
                }
              >
                string
              </span>
            </summary>
            <div>
              <div>
                <strong>
                  type
                </strong>
                 : 
                <span
                  style={
                    {
                      "opacity": "0.6",
                    }
                  }
                >
                  string
                </span>
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                >
                  <div>
                    <strong>
                      Possible values :
                    </strong>
                     
                    <code>
                      ["NW","NE","SW","SE"]
                    </code>
                  </div>
                </div>
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                >
                  The city quadrant of the address
                </div>
              </div>
            </div>
          </details>
        </li>
      </ul>
      <ul>
        <li>
          <details
            open={false}
          >
            <summary>
              <code>
                items[x]
              </code>
               
              <span
                style={
                  {
                    "opacity": "0.6",
                  }
                }
              >
                none
              </span>
            </summary>
            <div>
              <div>
                <strong>
                  type
                </strong>
                 : 
                <span
                  style={
                    {
                      "opacity": "0.6",
                    }
                  }
                >
                  none
                </span>
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                >
                  Always invalid
                </div>
              </div>
            </div>
          </details>
        </li>
      </ul>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        <div>
          🚨 
          No extra item(s) are authorized in this array
        </div>
      </div>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        Represent a street address such as ['1600','Pennsylvania','Avenue','NW']
      </div>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - Array type test 6 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        array
      </span>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        <div>
          <strong>
            Unique items :
          </strong>
           
          <code>
            yes
          </code>
        </div>
      </div>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - Array type test 7 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        array
      </span>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        <div>
          <strong>
            Length :
          </strong>
           
          <code>
            &gt;= 1
          </code>
        </div>
      </div>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - Array type test 8 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        array
      </span>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        <div>
          <strong>
            Length :
          </strong>
           
          <code>
            &lt;= 5
          </code>
        </div>
      </div>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - Array type test 9 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        array
      </span>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        <div>
          <strong>
            Must contain : 
          </strong>
           
          <code>
            at most 3 valid item(s)
          </code>
        </div>
      </div>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - Array type test 10 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        array
      </span>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        <div>
          <strong>
            Must contain : 
          </strong>
           
          <code>
            at least 2 valid item(s)
          </code>
        </div>
      </div>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - Array type test 11 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        array
      </span>
      <ul>
        <li>
          <details
            open={false}
          >
            <summary>
              <code>
                items[0]
              </code>
               
              <span
                style={
                  {
                    "opacity": "0.6",
                  }
                }
              >
                integer
              </span>
            </summary>
            <div>
              <div>
                <strong>
                  type
                </strong>
                 : 
                <span
                  style={
                    {
                      "opacity": "0.6",
                    }
                  }
                >
                  integer
                </span>
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                />
              </div>
            </div>
          </details>
        </li>
        <li>
          <details
            open={false}
          >
            <summary>
              <code>
                items[1]
              </code>
               
              <span
                style={
                  {
                    "opacity": "0.6",
                  }
                }
              >
                string
              </span>
            </summary>
            <div>
              <div>
                <strong>
                  type
                </strong>
                 : 
                <span
                  style={
                    {
                      "opacity": "0.6",
                    }
                  }
                >
                  string
                </span>
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                />
              </div>
            </div>
          </details>
        </li>
      </ul>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        <div>
          <strong>
            Length :
          </strong>
           
          <code>
            &gt;= 1
          </code>
        </div>
      </div>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - Array type test 12 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        array
      </span>
      <ul>
        <li>
          <details
            open={false}
          >
            <summary>
              <code>
                items[0]
              </code>
               
              <span
                style={
                  {
                    "opacity": "0.6",
                  }
                }
              >
                number
              </span>
               
              <strong>
                required
              </strong>
            </summary>
            <div>
              <div>
                <strong>
                  type
                </strong>
                 : 
                <span
                  style={
                    {
                      "opacity": "0.6",
                    }
                  }
                >
                  number
                </span>
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                />
              </div>
            </div>
          </details>
        </li>
        <li>
          <details
            open={false}
          >
            <summary>
              <code>
                items[1]
              </code>
               
              <span
                style={
                  {
                    "opacity": "0.6",
                  }
                }
              >
                string
              </span>
               
              <strong>
                required
              </strong>
            </summary>
            <div>
              <div>
                <strong>
                  type
                </strong>
                 : 
                <span
                  style={
                    {
                      "opacity": "0.6",
                    }
                  }
                >
                  string
                </span>
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                />
              </div>
            </div>
          </details>
        </li>
      </ul>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        <div>
          <strong>
            Length :
          </strong>
           
          <code>
            &gt;= 3
          </code>
        </div>
      </div>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - Array type test 13 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div>
    <div>
      <strong>
        type
      </strong>
       : 
      <span
        style={
          {
            "opacity": "0.6",
          }
        }
      >
        array
      </span>
      <ul>
        <li>
          <details
            open={false}
          >
            <summary>
              <code>
                items[x]
              </code>
               
              <span
                style={
                  {
                    "opacity": "0.6",
                  }
                }
              >
                string
              </span>
               
              <strong>
                required
              </strong>
            </summary>
            <div>
              <div>
                <strong>
                  type
                </strong>
                 : 
                <span
                  style={
                    {
                      "opacity": "0.6",
                    }
                  }
                >
                  string
                </span>
                <div
                  style={
                    {
                      "marginTop": "var(--ifm-table-cell-padding)",
                    }
                  }
                />
              </div>
            </div>
          </details>
        </li>
      </ul>
      <div
        style={
          {
            "marginTop": "var(--ifm-table-cell-padding)",
          }
        }
      >
        <div>
          <strong>
            Length :
          </strong>
           
          <code>
            &gt;= 1
          </code>
        </div>
      </div>
    </div>
  </div>
</details>
`;
